# az-simple-stack

./: README.md  az-simple-stack.code-workspace
.github/workflows/: azure-static-web-apps-thankful-beach-0e731bb0f.yml  ci.yaml
api/: .dockerignore  Dockerfile  pyproject.toml
api/api/: api.py
api/tests/: conftest.py  test_router.py  test_version.py
ui/: bun.lockb  package.json
ui/__tests__/: page.test.tsx
